<resources>
    <string name="app_name">Flash Deck</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="toast_back_press_exit">Press BACK again to exit</string>
    <string name="licenses">Licenses</string>
    <string name="version">Version</string>
    <string name="log_file">Log file</string>
    <string name="share_log_file">Share log file</string>
    <string name="error_sharing_log_file">Error sharing log file</string>
    <string name="log_file_deleted">Log file deleted</string>
    <string name="ui_desc_delete_log_file">Delete log file</string>
    <string name="title_add_deck">Add Deck</string>
    <string name="title_add_card">Add Card</string>
    <string name="form_name">Name</string>
    <string name="save">Save</string>
    <string name="name_is_required">Name is required</string>
    <string name="error_adding_new_deck">Error adding new deck</string>
    <string name="error_updating_deck">Error updating deck</string>
    <string name="success_adding_new_deck">Deck added: %s</string>
    <string name="success_updating_deck">Deck updated: %s</string>
    <string name="question_is_required">Question is required</string>
    <string name="answer_is_required">Answer is required</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="deck_id_is_required">Deck ID is required, please select deck first</string>
    <string name="title_new_card">New Card</string>
    <string name="error_count_deck">Error counting deck</string>
    <string name="error_failed_to_add_card">Error failed to add card</string>
    <string name="success_adding_new_card">New card added</string>
    <string name="error_failed_to_update_card">Error failed to update card</string>
    <string name="success_updating_card">Card updated</string>
    <string name="title_deck_list">Deck List</string>
    <string name="decks">Decks</string>
    <string name="title_edit_deck">Edit Deck</string>
    <string name="error_loading_decks">Error loading decks</string>
    <string name="title_confirm">Confirm</string>
    <string name="confirm_delete_deck">Are you sure you want to delete %s ?</string>
    <string name="error_deleting_deck">Error deleting deck</string>
    <string name="success_deleting_deck">Success deleting deck %s</string>
    <string name="hint_type_to_search">Type here to search</string>
    <string name="title_select_deck">Select Deck</string>
    <string name="title_select_deck_count">Select Deck (%1$d/%2$d selected)</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="total_cards">Cards: %d</string>
    <string name="error_counting_cards">Error counting cards</string>
    <string name="deck_due_count">Due: %1$d</string>
    <string name="error_counting_due_cards">Failed to count due cards</string>
    <string name="question_desc_value">Q: %s</string>
    <string name="answer_desc_value">A: %s</string>
    <string name="error_deleting_card">Error deleting card</string>
    <string name="success_deleting_card">Success deleting card %s</string>
    <string name="confirm_delete_card">Confirm delete card \'%s\'?</string>
    <string name="title_card_list">Card List</string>
    <string name="title_update_card">Update Card</string>
    <string name="cards">Cards</string>
    <string name="error_loading_deck">Error loading deck</string>
    <string name="move_card">Move card</string>
    <string name="copy_card">Copy card</string>
    <string name="generate_deck_from_card">Generate deck from card</string>
    <string name="error_moving_card">Error moving card</string>
    <string name="success_moving_card">Success moving card to %s</string>
    <string name="error_copying_card">Error copying card</string>
    <string name="success_copying_card">Success copying card to %s</string>
    <string name="title_start_test">Start Test</string>
    <string name="error_no_card_from_deck">No card on selected deck</string>
    <string name="error_starting_test">Error starting test</string>
    <string name="title_error">Error</string>
    <string name="error_no_deck_selected">No deck selected</string>
    <string name="exit">Exit</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="tap_to_view_answer">[Tap to view answer]</string>
    <string name="tap_to_edit_question">[Tap to edit question]</string>
    <string name="tap_to_edit_answer">[Tap to edit answer]</string>
    <string name="error_loading_test">Error loading test</string>
    <string name="error_test_not_found">Test not found</string>
    <string name="error_failed_to_get_previous_card">Failed to get previous card</string>
    <string name="error_failed_to_exit_test">Failed to exit test</string>
    <string name="error_failed_to_get_next_card">Failed to get next card</string>
    <string name="test_session_exist_confirm_start_new">There is a test currently running, would you like to stop and start new test?</string>
    <string name="confirm_exit_test">Do you want to stop test ?</string>
    <string name="resume_test">Resume test</string>
    <string name="theme_setting">Theme Setting</string>
    <string name="follow_system">Follow System</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="notification_time_description">Setup when you want to receive notification</string>
    <string name="notification_time_title">Notification time ( %1$s ~ %2$s )</string>
    <string name="title_start_time">Start Time</string>
    <string name="title_end_time">End Time</string>
    <string name="notification_time_updated">Notification time updated</string>
    <string name="notification_name_notification_timer">Notification Timer</string>
    <string name="notification_description_notification_timer">Notify selected cards to test you</string>
    <string name="notification_title_flash_question">Flash Question</string>
    <string name="deck_is_required">Deck is required</string>
    <string name="title_notification_timers">Notification Timers</string>
    <string name="edit">Edit</string>
    <string name="title_export_deck">Export Deck</string>
    <string name="title_export_anki">Export Anki</string>
    <string name="error_invalid_apkg">Not a valid Anki deck file (.apkg)</string>
    <string name="error_failed_to_create_file">Failed to create file</string>
    <string name="error_failed_to_open_file">Failed to open file</string>
    <string name="error_failed_to_parse_file">Failed to parse file</string>
    <string name="success_import_file">Success import file, %d deck(s) were added</string>
    <string name="title_add_image">Add Image</string>
    <string name="error_failed_to_save_question_image">Failed to save question image</string>
    <string name="error_failed_to_save_answer_image">Failed to save answer image</string>
    <string name="title_add_photo">Add Photo</string>
    <string name="title_add_voice">Add Voice</string>
    <string name="play_voice">Play voice</string>
    <string name="error_failed_to_save_question_voice">Failed to save question voice</string>
    <string name="error_failed_to_save_answer_voice">Failed to save answer voice</string>
    <string name="create_shuffle_shortcut">Create shuffle shortcut</string>
    <string name="deck_was_deleted">Deck %s was deleted</string>
    <string name="buy_developer_a_coffee">Buy developer a coffee</string>
    <string name="donation_pitch">Support developer, treat a cup of coffee</string>
    <string name="trakteer">Trakteer</string>
    <string name="donation_other_apps">Other apps by developer: %s</string>
    <string name="donation_thank_you">Thank you for your support</string>
    <string name="flash_bot_button_accept">Yes, let\'s try it</string>
    <string name="notification_name_general_message">General notification message</string>
    <string name="notification_description_general_message">Used to show general message from app</string>
    <string name="title_import_deck">Import Deck</string>
    <string name="error_please_select_deck">Error, please select deck</string>
    <string name="reversible_when_questioned">Reversible when questioned</string>
    <string name="title_generate_deck_from_existing">Generate Deck from Existing with Gemini</string>
    <string name="title_generate_deck_from_image">Generate Deck from Images with Gemini</string>
    <string name="save_and_add_another">Save &amp; Add Another</string>
    <string name="study_due_cards">Study Due Cards</string>
    <string name="study_due_cards_with_count">Study due (%1$d)</string>
    <string name="grade_again">Again</string>
    <string name="grade_hard">Hard</string>
    <string name="grade_good">Good</string>
    <string name="grade_easy">Easy</string>
    <string name="grade_hint">How well did you know it?</string>
    <string name="test_complete">Test complete!</string>
    <string name="test_summary_total">Total answers: %1$d</string>
    <string name="test_summary_time">Time: %1$s</string>
    <string name="test_suspended_cards_skipped">Suspended cards skipped (%1$d)</string>
    <string name="error_no_due_cards">No cards are due for study right now. New cards are always included.</string>
    <string name="error_saving_card_grade">Failed to save grade</string>
    <string name="suspend_card">Suspend</string>
    <string name="unsuspend_card">Unsuspend</string>
    <string name="card_suspended">Suspended</string>
    <string name="error_suspending_card">Error suspending card</string>
    <string name="success_suspending_card">Success suspending card %s</string>
    <string name="success_unsuspending_card">Success unsuspending card %s</string>

    <!-- Statistics page -->
    <string name="title_statistics">Statistics</string>
    <string name="stats_reviews_today">Reviews today</string>
    <string name="stats_streak">Day streak</string>
    <string name="stats_due_now">Due now</string>
    <string name="stats_reviews_last_30_days">Reviews (last 30 days)</string>
    <string name="stats_retention">Retention (last 30 days)</string>
    <string name="stats_retention_value">%1$d%% (%2$d reviews)</string>
    <string name="stats_today_grades">Today\'s grades</string>
    <string name="stats_due_forecast">Due forecast (next 14 days)</string>
    <string name="stats_due_forecast_summary">%1$d new · %2$d due later</string>
    <string name="stats_by_deck">By deck</string>
    <string name="stats_deck_summary">%1$d cards · %2$d due</string>
    <string name="stats_empty_history">No review history yet. Grade cards in a test and your statistics will appear here.</string>
</resources>
